// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/StatusDropdown should match snapshot in default state 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header"
  onToggle={[Function]}
  open={false}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={false}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status and expiry 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="In a meeting"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <span
              className="d-flex"
            >
              <Memo(CustomStatusEmoji)
                emojiStyle={
                  Object {
                    "marginLeft": 0,
                  }
                }
                showTooltip={false}
              />
            </span>
          </span>
          <CustomStatusText
            className="custom_status__text"
            text="In a meeting"
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          />
          <div
            className="status-dropdown-menu__clear-container input-clear visible"
            onClick={[Function]}
            onTouchEnd={[Function]}
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  id="InputClearTooltip"
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Clear"
                    id="input.clear"
                  />
                </Tooltip>
              }
              placement="left"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                aria-hidden="true"
                className="input-clear-x"
              >
                <i
                  className="icon icon-close-circle"
                />
              </span>
            </OverlayTrigger>
          </div>
        </span>
        <Memo(ExpiryTime)
          className="custom_status__expiry padded"
          time="2021-05-03T23:59:59.000Z"
          withinBrackets={true}
        />
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status enabled 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Set a Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status expired 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Set a Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with custom status pulsating dot enabled 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Set a Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
          <PulsatingDot />
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with profile picture URL 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header"
  onToggle={[Function]}
  open={false}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={false}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <Memo(Avatar)
      size="sm"
      url="http://localhost:8065/api/v4/users/jsx5jmdiyjyuzp9rzwfaf5pwjo/image?_=1590519110944"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <Memo(Avatar)
        size="lg"
        url="http://localhost:8065/api/v4/users/jsx5jmdiyjyuzp9rzwfaf5pwjo/image?_=1590519110944"
      />
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should match snapshot with status dropdown open 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should not show clear status button when custom status is not set 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Set a Custom Status"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <EmojiIcon
              className="custom-status-emoji"
            />
          </span>
          <CustomStatusText
            className="custom_status__text"
            text=""
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          >
            Set a Custom Status
          </Text>
        </span>
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/StatusDropdown should show clear status button when custom status is set 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="status-dropdown-menu status-dropdown-menu-global-header active"
  onToggle={[Function]}
  open={true}
>
  <button
    aria-controls="statusDropdownMenu"
    aria-expanded={true}
    aria-label="Current status: Away. Select to open profile and status menu."
    className="status-wrapper style--none"
  >
    <Memo(CustomStatusEmoji)
      emojiStyle={
        Object {
          "marginRight": "6px",
        }
      }
      onClick={[Function]}
      showTooltip={true}
      tooltipDirection="bottom"
    />
    <div
      className="status"
    >
      <StatusIcon
        size="sm"
        status="away"
      />
    </div>
  </button>
  <Menu
    ariaLabel="Set a status"
    id="statusDropdownMenu"
    listId="status-drop-down-menu-list"
  >
    <MenuHeader
      onClick={[Function]}
    >
      <div
        className="username-wrapper"
      >
        <Text
          className="bold"
          margin="none"
        >
          Nev Aa
        </Text>
        <Text
          className=""
          color="disabled"
          margin="none"
        >
          @undefined
        </Text>
      </div>
    </MenuHeader>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="out of office"
        extraText="Automatic Replies are enabled"
        onClick={[Function]}
        show={false}
        text="Out of office"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="In a meeting"
        className="MenuItem__primary-text custom_status__row"
        dialogType={[Function]}
        id="status-menu-custom-status"
        modalId="custom_status"
        show={true}
      >
        <span
          className="custom_status__container"
        >
          <span
            className="custom_status__icon"
          >
            <span
              className="d-flex"
            >
              <Memo(CustomStatusEmoji)
                emojiStyle={
                  Object {
                    "marginLeft": 0,
                  }
                }
                showTooltip={false}
              />
            </span>
          </span>
          <CustomStatusText
            className="custom_status__text"
            text="In a meeting"
            tooltipDirection="bottom"
          />
          <Text
            color="disabled"
            margin="none"
          />
          <div
            className="status-dropdown-menu__clear-container input-clear visible"
            onClick={[Function]}
            onTouchEnd={[Function]}
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delayShow={400}
              overlay={
                <Tooltip
                  id="InputClearTooltip"
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Clear"
                    id="input.clear"
                  />
                </Tooltip>
              }
              placement="left"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <span
                aria-hidden="true"
                className="input-clear-x"
              >
                <i
                  className="icon icon-close-circle"
                />
              </span>
            </OverlayTrigger>
          </div>
        </span>
        <Memo(ExpiryTime)
          className="custom_status__expiry padded"
          time="2021-05-03T23:59:59.000Z"
          withinBrackets={true}
        />
      </MenuItemToggleModalRedux>
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        ariaLabel="online"
        icon={
          <StatusIcon
            className="status-icon"
            status="online"
          />
        }
        id="status-menu-online"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Online"
      />
      <MenuItemAction
        ariaLabel="away"
        icon={
          <StatusIcon
            className="status-icon"
            status="away"
          />
        }
        id="status-menu-away"
        onClick={[Function]}
        rightDecorator={
          <Icon
            color="success"
            glyph="check"
            size={16}
          />
        }
        show={true}
        text="Away"
      />
      <SubMenuItem
        ariaLabel="do not disturb. disables desktop, email and push notifications"
        direction="left"
        extraText="Disables all notifications"
        icon={
          <StatusIcon
            className="status-icon"
            status="dnd"
          />
        }
        id="status-menu-dnd"
        openUp={false}
        renderSelected={true}
        rightDecorator={false}
        show={true}
        subMenu={
          Array [
            Object {
              "direction": "right",
              "id": "dndSubMenu-header",
              "isHeader": true,
              "text": "Disable notifications until:",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-thirty_minutes",
              "text": "30 mins",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-one_hour",
              "text": "1 hour",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-two_hours",
              "text": "2 hours",
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-tomorrow",
              "text": <React.Fragment>
                Tomorrow
                <span
                  className="dndTime-tomorrow_timestamp"
                >
                  <FormattedDate
                    value={2021-11-03T22:48:57.000Z}
                    weekday="short"
                  />
                  , 
                  <FormattedTime
                    hour12={true}
                    timeStyle="short"
                    value={2021-11-03T22:48:57.000Z}
                  />
                </span>
              </React.Fragment>,
            },
            Object {
              "action": [Function],
              "direction": "right",
              "id": "dndTime-custom",
              "text": "Custom",
            },
          ]
        }
        subMenuClass="pl-4"
        text="Do not disturb"
      />
      <MenuItemAction
        ariaLabel="offline"
        icon={
          <StatusIcon
            className="status-icon"
            status="offline"
          />
        }
        id="status-menu-offline"
        onClick={[Function]}
        rightDecorator={false}
        show={true}
        text="Offline"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemToggleModalRedux
        ariaLabel="Profile"
        dialogProps={
          Object {
            "isContentProductSettings": false,
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <Icon
            glyph="account-outline"
            size={16}
          />
        }
        id="accountSettings"
        modalId="user_settings"
        show={true}
        text="Profile"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <Icon
            glyph="exit-to-app"
            size={16}
          />
        }
        id="logout"
        onClick={[Function]}
        show={true}
        text="Log Out"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;
